# MercuryJson

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  download-data.sh  gmon.out  log  out.json
benchmark/: CMakeLists.txt  rapidjson.cpp
data/: .gitignore  array.json  demographic_statistics_by_zipcode.json  download-data.sh  non-ascii.json  numbers-small.json  pp.json  small.json  test_extract_escape_mask.json
data/invalid_json/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
report/: main.bib  main.tex  nips.sty
report/figures/: json_fsm.dot  json_fsm_nfa.dot
src/: block_allocator.hpp  constants.h  find_structurals.cpp  flags.h  linux-perf-events.h  main.cpp  mercuryparser.cpp  mercuryparser.h  mercuryparser.hpp  parsestring.cpp  parsestring.h  recursive_descent_parser.cpp  shift_reduce_parser.cpp  tape.cpp  tape.h  tests.cpp  tests.h  tests.hpp  utils.cpp  utils.h
